--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,6 +12,8 @@
     margin:auto;
     text-shadow:1px 2px black;
     font-family: sans-serif;
+    display:flex;
+    flex-direction: column;
 }
 .icon{
     display:flex;
@@ -60,4 +62,18 @@
     font-size:20px;
     font-weight:bold;
     font-family:sans-serif;
+}
+.reset{
+    cursor:pointer;
+    font-size:24px;
+    margin:5px 5px 0px 354px;
+    text-align:right;
+    display:flex;
+    justify-content: right;
+    transition:background-color 0.75s ease-in-out;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+}
+.reset:hover{
+    background-color: rgba(253, 181, 181, 0.537);
 }
